<?xml version="1.0"?>
<package format="2">
  <name>qml_ros_plugin</name>
  <version>1.0.0</version>
  <description>The qml_ros_plugin package</description>

  <maintainer email="qml_ros_plugin@stefanfabian.me">Stefan Fabian</maintainer>

  <license>MIT</license>

  <url type="website">https://qml-ros-plugin.readthedocs.io/en/latest/</url>
  <url type="repository">https://github.com/StefanFabian/qml_ros_plugin</url>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>roscpp</depend>
  <depend>hector_camera_server_msgs</depend>
  <depend>image_transport</depend>
  <depend>ros_babel_fish</depend>
  <depend>tf2_ros</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-multimedia</depend>
  <depend>libqt5-qml</depend>
  <depend>libqt5-quick</depend>
  <depend>yaml-cpp</depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>qtdeclarative5-dev</build_depend>
  <build_depend>qtmultimedia5-dev</build_depend>
  <test_depend>qml-module-qtquick2</test_depend>
  <test_depend>roscpp_tutorials</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>ros_babel_fish_test_msgs</test_depend>
  <test_depend>std_srvs</test_depend>
</package>
