<?xml version="1.0"?>
<package format="2">
  <name>poor_people</name>
  <version>1.0.0</version>
  <description>The poor_people package</description>

  <maintainer email="qml_ros_plugin@stefanfabian.me">Stefan Fabian</maintainer>

  <license>Birthright</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>world</depend>

  <export>
  </export>
</package>
