<?xml version="1.0"?>
<package format="2">
  <name>rick_astley</name>
  <version>1.0.0</version>
  <description>The rick_astley package</description>

  <maintainer email="qml_ros_plugin@stefanfabian.me">Stefan Fabian</maintainer>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>world</depend>

  <export>
    <world value="Never Gonna Give You Up"/>
  </export>
</package>
